# fedi-post-rs

./: Cargo.toml
.github/workflows/: ci.yml
src/: lemmy.rs  lib.rs  piefed.rs
