[package]
name = "fedi-post"
description = "A library to create posts on different fediverse services."
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
repository = "https://github.com/ISibboI/fedi-post-rs"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
log = "0.4.32"
serde = "1.0.228"
serde_json = "1.0.150"
lemmy-client = "0.19.18"
thiserror = "2.0.18"
